src/_includes/css/style.css
/* ... */
#post h2:hover .direct-link,
#post h3:hover .direct-link,
#post h4:hover .direct-link,
#post .direct-link:focus,
#post .direct-link:focus,
#post .direct-link:focus {
    color: #444 !important;
    cursor: pointer;
}

#post-title {
    margin-bottom: .5rem;
    font-size: clamp(2rem, 6vw, 2.75rem);
}

#post {
    margin-top: 3.5rem;
    margin-top: 2rem;
}

#post h2,
#post h3,
#post h4 {
    margin-bottom: .75rem;
}

.clear-filter-btn {
    text-decoration: none;
    padding: .25rem .5rem;
    font-weight: 500;
    font-size: .95rem;
    background: rgb(26, 32, 36);
    background: rgb(37, 45, 51);
    background: rgb(54, 60, 63);
    /* background: hsl(0, 0%, 23%); */
    color: #fff !important;
    border: 1.5px solid rgb(54, 60, 63);
}

.main-content .my-posts .clear-filter-btn:hover {
    background: inherit;
    color: #212121 !important;
    text-decoration: none;
}
.tagged-title {
    display: flex; 
    flex-wrap: wrap; 
    justify-content: space-between; 
    align-items: center;
}

.main-content .post {
    padding-top: .5rem;
    padding-bottom: .5rem;
}

#post-content #post ul li,
#post-content #post ol li {
    padding: .3rem 0;
}
.main-content .post .preview {
    line-height: 1.5;
    margin-top: .75rem;
    margin-bottom: .5rem;
}

.post .date {
    font-size: 16px;
    margin-top: 0;
    margin-bottom: .75rem;
}

#main {
    margin: 0 auto 4rem auto;
}

main .art {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 2rem;
    margin-left: auto;
    margin-right: auto;
    padding-left: 1rem;
    padding-right: 1rem;
    padding-bottom: 1rem;
    max-width: 1000px;
    max-width: 980px;
}

main .art .art-details {
    margin-top: 2rem;
    margin-bottom: 2rem;
    text-align: left;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

main .art .art-details .drawing-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

main .art img {
    object-fit: cover;
    height: 100%;
}

.featured-info {
    margin-top: .75rem; 
    margin-bottom: .75rem; 
    font-size: clamp(1.5rem, 6vw, 1.7rem);
}

.created {
    margin-top: 0; 
    margin-bottom: 0; 
}

.main-container .message-me {
    background: inherit;
    border: .125rem solid rgb(37, 43, 48);
    padding: .5rem .75rem;
    color: #212121;
    text-decoration: none;
    margin: 2rem auto;
    font-size: 16px;
}

.message-me:hover {
    background: rgb(37, 43, 48);
    color: #fff;
    text-decoration: none;
}

/* Media queries - START */

@media (max-width: 900px) {
    .featured-art .feat-art-list {
        flex-direction: column;
    }
    .featured-art  h2 {
        text-align: center;
    }
}

@media (max-width: 800px) {
    .featured-art .feat-art-list li {
        padding-right: 0;
    }
} 

@media (max-width: 670px) {
    .top-nav .nav-wrapper {
        padding-top: 1rem;
        padding-bottom: .5rem;
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        align-items: flex-start;
        overflow-x: auto;
    }

    .top-nav .nav-wrapper .nav-home {
        margin-bottom: 1.5rem;
    }

    .navigation .navigation-wrapper .nav-main .nav-list .nav-item a {
        padding-left: .5rem;
        margin-left: 0;
    }
    .top-nav .nav-wrapper .nav-menu li .first-link {
        margin-left: 0;
    }
}

@media (max-width: 635px) {

    .footer-content .footer-info {
        justify-content: flex-start;
    }
    .footer-content .footer-nav .footer-flex {
        padding-bottom: .25rem;
    }
}

@media (max-width: 375px) {
    .footer-content .footer-nav {
        padding-bottom: 1rem;
    }
    .footer-content .footer-flex ul {
        flex-wrap: wrap;
        height: 2.5rem;
    }
    .footer-content .footer-flex ul .edit-page {
        margin-top: .75rem;
    }
    .footer-flex {
        margin-top: 1rem;
    }
}

@media (max-width: 365px) {
    .socials-list {
        flex-direction: column;
    }

    .socials-list li a {
        margin: 1rem 0;
    }
}

@media (max-width: 350px) {
    .main-container .projects .project-grid {
        grid-template-columns: repeat(auto-fit, minmax(17rem, 1fr));
    }
}

